--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -2,6 +2,7 @@
 // color
 $color-primary: #6b63f1;
 $color-text-primary: #2C003E;
+$color-text-white: #FFFFFF;
 $color-bg-primary: #efeeff;
 $color-hover-primary: darken($color-primary, 10%);
 
@@ -12,11 +13,11 @@ $font-size-md: 1rem;      // 16px
 $font-size-lg: 1.25rem;   // 20px
 
 // 📐 Spacing
-$spacing-xs: 0.25rem;  // 4px
-$spacing-sm: 0.5rem;   // 8px
-$spacing-md: 1rem;     // 16px
-$spacing-lg: 1.5rem;   // 24px
-$spacing-xl: 2rem;     // 32px
+$spacing-xs: 6px;  // 4px
+$spacing-sm: 10px;  // 8px
+$spacing-md: 16px; // 16px
+$spacing-lg: 24px; // 24px
+$spacing-xl: 32px; // 32px
 
 // 🟦 Border radius
 $radius-sm: 4px;
@@ -26,4 +27,10 @@ $radius-lg: 12px;
 // 🔲 Z-index
 $z-header: 1000;
 $z-modal: 1100;
-$z-tooltip: 1200
+$z-tooltip: 1200;
+
+// line height  
+$line-height-xs: 1rem;
+$line-height-sm: 1.25rem;
+$line-height-md: 1.5rem;
+$line-height-lg: 1.75rem;
