--- a/src/pages/auth/components/Form.scss
+++ b/src/pages/auth/components/Form.scss
@@ -1,5 +1,5 @@
 .form-container{
-    height: 585px;
+    min-height: 585px;
     width: 470px;
     background-color: #fff;
     border-radius: 4px;
